# plumbingbird

./: README.md  pyproject.toml  setup.cfg
etl/extractors/: api_fetcher.py
etl/loaders/: postgres_loaders.py
etl/transformers/: csv_streamer.py
extractors/: api_fetcher.py
loaders/: postgres_loaders.py
orchestration/aws/: infra.py  job.py  utilities.py
tests/demo/: dummy_api_fetcher.py
tests/integration_tests/: test_buffer.py  test_fetcher.py
transformers/: csv_streamer.py
utilities/: environment.py  etl_primitives.py  orchestration_primitives.py
