[tool.poetry]
name = "plumbingbird"
version = "0.1.1"
description = "Handy tools for common data engineering needs."
authors = ["Rebecca Lovering <lovering810@gmail.com>", "Alicia Bargar <abargar@gmail.com>"]
license = "GNU GPLv3"
readme = "README.md"

# Default Dependencies
[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "*"
requests = "^2.31.0"
pyyaml = "^6.0.1"
smart_open = "*"

psycopg2 = { version = "*", optional = true }
boto3 = { version = "^1.7.84", optional = true }

[tool.poetry.extras]
psql = ["psycopg2"]
aws = ["boto3"]

# Optional Dependency Group
# For development
[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "*"
mypy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


